fix(web): fix font not showing

--- a/src/Web/static/style.css
+++ b/src/Web/static/style.css
@@ -1,7 +1,5 @@
-* {
+body {
 	font-family: 'Cascadia Code', monospace;
-	font-weight: normal;
-	font-style: normal;
 }
 
 body::-webkit-scrollbar-track {
